[package]
name = "tracing-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.139", features = ["derive"] }
tracing = "0.1.35"
tracing-serde-structured = "0.1.1"
tracing-subscriber = "0.3.14"
